# subjectLineOptimizer

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  README.md
agentcore/: agentcore.json
agentcore/cdk/: package-lock.json
app/subject_line_optimizer/: main.py  pyproject.toml
app/subject_line_optimizer/agent/: builder.py  iteration.py  prompts.py
app/subject_line_optimizer/briefing/: schema.py
app/subject_line_optimizer/briefing/examples/: acquisition.json  cross_sell.json  reactivation.json  regulatory.json
app/subject_line_optimizer/data/: README.md  heuristics.csv
app/subject_line_optimizer/memory/: client.py  schema.py  session.py
app/subject_line_optimizer/model/: load.py
app/subject_line_optimizer/scoring/: score.py
